Fix Spacing

--- a/src/styles/components/_VisibilityButtonComponent.scss
+++ b/src/styles/components/_VisibilityButtonComponent.scss
@@ -1,8 +1,8 @@
 .mltc-name-td-v2 .sstc-visibility-button {
   border: none;
   margin-top: 0; // adjusts the icon to be even with checkbox
-  margin-left: -.2em; // adjust icon size (icon expands to 100% width)
-  margin-right: -.2em; // adjust icon size (icon expands to 100% width)
+  margin-left: .2em; // adjust icon size (icon expands to 100% width)
+  margin-right: -.3em; // adjust icon size (icon expands to 100% width)
   margin-bottom: .1em; // adjust inter-row distance
   box-shadow: 0 0 0 0 rgba(0, 123, 255, 0);
 }
