--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -36,8 +36,8 @@
 .mltc-name-td-v2 .sstc-visibility-button {
   border: none;
   margin-top: 0;
-  margin-left: -0.2em;
-  margin-right: -0.2em;
+  margin-left: 0.2em;
+  margin-right: -0.3em;
   margin-bottom: 0.1em;
   box-shadow: 0 0 0 0 rgba(0, 123, 255, 0);
 }
@@ -91,6 +91,38 @@
   padding-right: 6px;
   display: block;
   box-sizing: content-box;
+}
+
+.mltc-name-td-v2 .mltc-expand-button {
+  padding: 5px;
+  width: 24px;
+  height: 22px;
+}
+
+.mltc-name-td-v2 .mltc-expand-button {
+  color: black;
+  background: none;
+  margin: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+  padding-right: 3px;
+  box-shadow: 0 0 0 0 rgba(0, 123, 255, 0);
+}
+
+.mltc-name-td-v2 .mltc-expand-button:hover {
+  color: #ff0000;
+  background: none;
+  box-shadow: 0 0 0 0 rgba(0, 123, 255, 0);
+}
+
+.mltc-name-td-v2 .mltc-expand-button:focus {
+  color: black;
+  background: none;
+  margin: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+  padding-right: 3px;
+  box-shadow: 0 0 0 0 rgba(0, 123, 255, 0);
 }
 
 /*# sourceMappingURL=styles.css.map */
